# score

./: .bazelrc  BUILD  CONTRIBUTION.md  MODULE.bazel  index.html  versions  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bugfix.yml
.github/workflows/: copyright.yml  daily.yml  docs-cleanup.yml  docs.yml  format.yml  gitlint.yml  license_check.yml  on-pr.yml
dcalavrezo_dash_clearance/platform_management_plan/: index.html  safety_management.html
docs/: index.rst
docs/contribute/: index.rst
docs/design_decisions/: DR-001-arch.md  DR-001-infra.md  DR-001-proc.rst  DR-001-strat.md  DR-002-arch.md  DR-002-infra.md  DR-002-proc.md  DR-003-arch-ACL-Concept.md  DR-003-infra.md  DR-004-infra.rst  DR-006-infra.md  DR-007-infra.rst  DR-008-infra.rst  DR-008-int.rst  DR-009-ACL-Concept.md  index.rst
docs/features/: index.rst
docs/guidance/: publishing-gh-pages.rst
docs/modules/: index.rst
docs/platform_management_plan/: change_management.rst  documentation_management.rst  index.rst  problem_resolution.rst  project_management.rst  quality_management.rst  release_management.rst  safety_management.rst  security_management.rst  software_development.rst  software_verification.rst  vulnerability_management.rst
docs/quality/: qlm_report.rst  qms_report.rst
docs/safety/: fdr_reports_safety_analyses_DFA.rst  fdr_reports_safety_package.rst  fdr_reports_safety_platform_safety_plan.rst  index.rst  platform_dfa.rst  platform_safety_manual.rst
docs/score_releases/: index.rst
docs/score_tools/: doc_as_code.rst  index.rst  itf.rst  score_tools_evaluation_list.rst  symbol_report_blanket.rst
main/: genindex.html  index.html  metrics.json  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
main/_static/: puml-theme-score.puml
main/contribute/: index.html
main/design_decisions/: DR-001-arch.html  DR-001-infra-extension.html  DR-001-infra.html  DR-001-proc.html  DR-001-strat.html  DR-002-arch.html  DR-002-infra.html  DR-002-proc.html  DR-003-infra.html  DR-004-infra.html  DR-006-infra.html  DR-007-infra.html  DR-008-infra.html  DR-008-int.html  index.html
main/features/: index.html
main/handbook/: index.html
main/introduction/: index.html
main/modules/: index.html
main/platform_management_plan/: change_management.html  config_management.html  documentation_management.html  index.html  problem_resolution.html  project_management.html  quality_management.html  release_management.html  requirements_management.html  safety_management.html  security_management.html  software_development.html  software_verification.html  tool_management.html  (+1 more)
main/safety/: index.html  (+5 more)
pr-1/: objects.inv  searchindex.js
pr-2/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-3/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-5/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  searchindex.js
sbachmann_kvs_component_arch/: objects.inv  searchindex.js
ulhu_persistency_kvs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
(+2220 files in other folders)
